[gd_scene load_steps=6 format=3 uid="uid://djqmfqxfdqvw3"]

[ext_resource type="Shader" path="res://pixel_outline.gdshader" id="1_3mfkj"]
[ext_resource type="Texture2D" uid="uid://csfvnup16wcwe" path="res://GrahaSprites/pill.png" id="2_wfc1g"]
[ext_resource type="Script" path="res://Draggable.gd" id="3_lna3a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_j4smj"]
shader = ExtResource("1_3mfkj")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1nip"]
size = Vector2(24, 47)

[node name="Pill" type="Area2D"]
position = Vector2(156, -39)
collision_layer = 3
collision_mask = 3

[node name="Pill2" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_j4smj")
position = Vector2(0, -3)
scale = Vector2(4, 4)
texture = ExtResource("2_wfc1g")

[node name="Draggable" type="Node2D" parent="."]
position = Vector2(0, 1)
script = ExtResource("3_lna3a")

[node name="Pill" type="Node2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2.5)
shape = SubResource("RectangleShape2D_j1nip")

[node name="ExpireTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="mouse_entered" from="." to="Draggable" method="_on_cake_mouse_entered"]
[connection signal="mouse_exited" from="." to="Draggable" method="_on_cake_mouse_exited"]
